--- a/src/kv.client/kv.client.fsproj
+++ b/src/kv.client/kv.client.fsproj
@@ -4,10 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <LangVersion>preview</LangVersion>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Library.fs" />
+    <Compile Include="kv.fs" />
   </ItemGroup>
 
   <ItemGroup>
