--- a/src/kv/Properties/launchSettings.json
+++ b/src/kv/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       }
     },
     "kv": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "--dev"
     }
   }
 }
