serve content from resources

--- a/src/eskv/Properties/launchSettings.json
+++ b/src/eskv/Properties/launchSettings.json
@@ -16,8 +16,7 @@
       }
     },
     "kv": {
-      "commandName": "Project",
-      "commandLineArgs": "--dev"
+      "commandName": "Project"
     }
   }
 }
