--- a/src/eskv.client/eskv.client.fsproj
+++ b/src/eskv.client/eskv.client.fsproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="kv.fs" />
+    <Compile Include="eskv.fs" />
   </ItemGroup>
 
   <ItemGroup>
