--- a/src/eskv.client/eskv.client.fsproj
+++ b/src/eskv.client/eskv.client.fsproj
@@ -12,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="6.0.0" />
   </ItemGroup>
 
