--- a/src/eskv.ui/package.json
+++ b/src/eskv.ui/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@creativebulma/bulma-tooltip": "^1.2.0",
     "bulma": "^0.9.3",
+    "bulma-tooltip": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "style.css": "^1.0.0"
