--- a/src/eskv/eskv.fsproj
+++ b/src/eskv/eskv.fsproj
@@ -14,15 +14,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="..\eskv.ui\dist\style.css" Link="wwwroot\content\style.css">
+    <EmbeddedResource Include="..\..\dist\style.css" Link="wwwroot\content\style.css">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\eskv.ui\dist\App.fs.js" Link="wwwroot\content\App.fs.js">
+    <EmbeddedResource Include="..\..\dist\App.fs.js" Link="wwwroot\content\App.fs.js">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="wwwroot\index.html" />
-    <None Include="..\eskv.ui\dist\App.fs.js.map" Link="wwwroot\content\App.fs.js.map" />
-    <None Include="..\eskv.ui\dist\style.css.map" Link="wwwroot\content\style.css.map" />
+    <None Include="..\..\dist\App.fs.js.map" Link="wwwroot\content\App.fs.js.map" />
+    <None Include="..\..\dist\style.css.map" Link="wwwroot\content\style.css.map" />
     <None Include="Properties\launchSettings.json" />
     <Compile Include="..\eskv.ui\Shared.fs" Link="Shared.fs" />
     <Compile Include="AspNetExtensions.fs" />
