--- a/src/eskv.ui/eskv.ui.fsproj
+++ b/src/eskv.ui/eskv.ui.fsproj
@@ -8,10 +8,9 @@
   <ItemGroup>
     <Content Include="style.scss" />
     <Compile Include="Shared.fs" />
+    <Compile Include="Style.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
-
-  <ItemGroup />
 
   <ItemGroup>
     <PackageReference Include="Fable.Browser.Css" Version="2.1.0" />
