--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,8 @@ jobs:
         include-prerelease: true
     - name: Setup Node.js environment
       uses: actions/setup-node@v2.4.1
+      with: 
+        node-version: 16.10.0
     - name: Build
       run: ./build.sh
       
