--- a/src/eskv/eskv.fsproj
+++ b/src/eskv/eskv.fsproj
@@ -6,7 +6,13 @@
     <LangVersion>preview</LangVersion>
     <IsPackable>true</IsPackable>
     <PackAsTool>true</PackAsTool>
-    <IncludeContentInPack>false</IncludeContentInPack>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <Authors>Jérémie Chassaing</Authors>
+    <Company>thinkbeforecoding</Company>
+    <Description>In-memory key/value and event store, for educational purpose.</Description>
+    <PackageProjectUrl>https://github.com/thinkbeforecoding/eskv</PackageProjectUrl>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <Icone>eskv.png</Icone>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,9 +27,9 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="wwwroot\index.html" />
-    <None Include="..\..\dist\App.fs.js.map" Link="wwwroot\content\App.fs.js.map" />
-    <None Include="..\..\dist\style.css.map" Link="wwwroot\content\style.css.map" />
-    <None Include="Properties\launchSettings.json" />
+    <None Include="..\..\README.md" Link="docs\README.md" Pack="true" PackagePath="\" />
+    <None Include="..\..\LICENSE.md" Link="docs\LICENSE.md" Pack="true" PackagePath="\" />
+    <None Include="..\..\docs\eskv.png" Link="docs\eskv.img" Pack="true" PackagePath="\" />
     <Compile Include="..\eskv.ui\Shared.fs" Link="Shared.fs" />
     <Compile Include="AspNetExtensions.fs" />
     <Compile Include="Streams.fs" />
@@ -33,12 +39,9 @@
     <PackageReference Include="Argu" Version="6.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.Json" Version="5.0.10" />
     <PackageReference Include="Thoth.Json.Net" Version="7.1.0" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\content\" />
   </ItemGroup>
-
 </Project>
