--- a/src/eskv/eskv.fsproj
+++ b/src/eskv/eskv.fsproj
@@ -12,7 +12,7 @@
     <Description>In-memory key/value and event store, for educational purpose.</Description>
     <PackageProjectUrl>https://github.com/thinkbeforecoding/eskv</PackageProjectUrl>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
-    <Icone>eskv.png</Icone>
+    <PackageIcon>eskv.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
