--- a/src/eskv/eskv.fsproj
+++ b/src/eskv/eskv.fsproj
@@ -39,9 +39,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Argu" Version="6.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.Json" Version="5.0.10" />
-    <PackageReference Include="Thoth.Json.Net" Version="7.1.0" />
-    <PackageReference Update="FSharp.Core" Version="6.0.1" />
+    <PackageReference Include="Thoth.Json.Net" Version="8.0.0" />
+    <PackageReference Update="FSharp.Core" Version="6.0.3" />
+    <PackageReference Update="Nerdbank.GitVersioning" Version="3.4.255" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\content\" />
