Add GetStreamAsync method with IAsyncEnumerable

--- a/src/eskv.ui/eskv.ui.fsproj
+++ b/src/eskv.ui/eskv.ui.fsproj
@@ -13,14 +13,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fable.Browser.Css" Version="2.1.0" />
-    <PackageReference Include="Fable.Browser.WebSocket" Version="1.1.0" />
+    <PackageReference Include="Fable.Browser.Css" Version="2.2.0" />
+    <PackageReference Include="Fable.Browser.WebSocket" Version="1.2.0" />
     <PackageReference Include="Fable.Elmish" Version="3.1.0" />
     <PackageReference Include="Fable.Elmish.Browser" Version="3.0.4" />
     <PackageReference Include="Fable.Elmish.HMR" Version="5.2.0" />
     <PackageReference Include="Fable.Elmish.React" Version="3.0.1" />
     <PackageReference Include="Fable.Fetch" Version="2.4.0" />
-    <PackageReference Include="Feliz" Version="1.60.0" />
+    <PackageReference Include="Feliz" Version="1.61.0" />
     <PackageReference Include="Feliz.Bulma" Version="2.18.0" />
     <PackageReference Include="Feliz.Bulma.Tooltip" Version="2.0.0" />
     <PackageReference Include="Thoth.Json" Version="7.0.0" />
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="6.0.3" />
+    <PackageReference Update="Nerdbank.GitVersioning" Version="3.4.255" />
   </ItemGroup>
 
 </Project>
