--- a/src/eskv.client/eskv.client.fsproj
+++ b/src/eskv.client/eskv.client.fsproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="6.0.3" />
+    <PackageReference Update="Nerdbank.GitVersioning" Version="3.4.255" />
   </ItemGroup>
 
 </Project>
