--- a/src/eskv.client/eskv.client.fsproj
+++ b/src/eskv.client/eskv.client.fsproj
@@ -24,7 +24,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="6.0.0" />
-    <PackageReference Include="HttpMultipartParser" Version="7.0.0"/>
+    <PackageReference Include="HttpMultipartParser" Version="7.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="3.5.119" />
   </ItemGroup>
 
 </Project>
