--- a/src/eskv/eskv.fsproj
+++ b/src/eskv/eskv.fsproj
@@ -44,4 +44,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\content\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="3.5.119" />
+  </ItemGroup>
 </Project>
